--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 db.driver = org.postgresql.Driver
 db.url = jdbc:postgresql://localhost/postgres
 db.username = postgres
-db.password = daniel2013
+db.password = secret
 
 hibernate.show_sql = true
 hibernate.hbm2ddl.auto = update
